# Vortex-Lattice-Method

./: CMakeLists.txt  LICENSE  README.md
include/: InputFreeStream.h  InputGeometry.h  InputVortexDistribution.h  VLMSolver.h
src/: CMakeLists.txt  InputFreeStream.cpp  InputGeometry.cpp  VLMSolver.cpp
test/: CMakeLists.txt  test_InputFreeStream.cpp
